# geosnag

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  config.example.yaml  pyproject.toml
.github/: CODEOWNERS  ruleset-main.json
.github/workflows/: lint-and-test.yml  release.yml
geosnag/: __init__.py  __main__.py  cli.py  index.py  matcher.py  parallel.py  scanner.py  writer.py
scripts/: download_exiftool.py
tests/: test_e2e.py  test_format_mismatch.py  test_index.py  test_integration.py  test_special_paths.py  test_writer.py
tests/fixtures/: camera_no_gps.nef  phone_no_gps.heic  phone_with_gps.heic
