[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geosnag"
version = "0.1.0"
description = "Auto-enrich photos with GPS coordinates from other photos taken nearby in time"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "GeoSnag Contributors"},
]
keywords = ["exif", "gps", "photo", "geotag", "synology", "nas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "exifread>=3.0.0",
    "pyexiv2>=2.12.0",
    "pillow-heif>=0.10.0",
    "Pillow>=9.0.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/zheqd/geosnag"
Repository = "https://github.com/zheqd/geosnag"
Issues = "https://github.com/zheqd/geosnag/issues"

[project.scripts]
geosnag = "geosnag.cli:main"

[tool.setuptools.packages.find]
include = ["geosnag*"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
